glf90w.h

extern int const glf90w_client_api;
extern int const glf90w_context_version_major;
extern int const glf90w_context_version_minor;
extern int const glf90w_context_revision;
extern int const glf90w_context_robustness;
extern int const glf90w_opengl_forward_compat;
extern int const glf90w_context_debug;
extern int const glf90w_opengl_debug_context;
extern int const glf90w_opengl_profile;
extern int const glf90w_context_release_behavior;
extern int const glf90w_context_no_error;
extern int const glf90w_context_creation_api;
extern int const glf90w_scale_to_monitor;
extern int const glf90w_scale_framebuffer;
extern int const glf90w_cocoa_retina_framebuffer;
extern int const glf90w_cocoa_frame_name;
extern int const glf90w_cocoa_graphics_switching;
extern int const glf90w_x11_class_name;
extern int const glf90w_x11_instance_name;
extern int const glf90w_win32_keyboard_menu;
extern int const glf90w_win32_showdefault;
extern int const glf90w_wayland_app_id;
extern int const glf90w_no_api;
extern int const glf90w_opengl_api;
extern int const glf90w_opengl_es_api;
extern int const glf90w_no_robustness;
extern int const glf90w_no_reset_notification;
extern int const glf90w_lose_context_on_reset;
extern int const glf90w_opengl_any_profile;
extern int const glf90w_opengl_core_profile;
extern int const glf90w_opengl_compat_profile;
extern int const glf90w_cursor;
extern int const glf90w_sticky_keys;
extern int const glf90w_sticky_mouse_buttons;
extern int const glf90w_lock_key_mods;
extern int const glf90w_raw_mouse_motion;
extern int const glf90w_cursor_normal;
extern int const glf90w_cursor_hidden;
extern int const glf90w_cursor_disabled;
extern int const glf90w_cursor_captured;
extern int const glf90w_any_release_behavior;
extern int const glf90w_release_behavior_flush;
extern int const glf90w_release_behavior_none;
extern int const glf90w_native_context_api;
extern int const glf90w_egl_context_api;
extern int const glf90w_osmesa_context_api;
extern int const glf90w_angle_platform_type_none;
extern int const glf90w_angle_platform_type_opengl;
extern int const glf90w_angle_platform_type_opengles;
extern int const glf90w_angle_platform_type_d3d9;
extern int const glf90w_angle_platform_type_d3d11;
extern int const glf90w_angle_platform_type_vulkan;
extern int const glf90w_angle_platform_type_metal;
extern int const glf90w_wayland_prefer_libdecor;
extern int const glf90w_wayland_disable_libdecor;
extern int const glf90w_any_position;
extern int const glf90w_arrow_cursor;
extern int const glf90w_ibeam_cursor;
extern int const glf90w_crosshair_cursor;
extern int const glf90w_pointing_hand_cursor;
extern int const glf90w_resize_ew_cursor;
extern int const glf90w_resize_ns_cursor;
extern int const glf90w_resize_nwse_cursor;
extern int const glf90w_resize_nesw_cursor;
extern int const glf90w_resize_all_cursor;
extern int const glf90w_not_allowed_cursor;
extern int const glf90w_hresize_cursor;
extern int const glf90w_vresize_cursor;
extern int const glf90w_hand_cursor;
extern int const glf90w_connected;
extern int const glf90w_disconnected;
extern int const glf90w_joystick_hat_buttons;
extern int const glf90w_angle_platform_type;
extern int const glf90w_platform;
extern int const glf90w_cocoa_chdir_resources;
extern int const glf90w_cocoa_menubar;
extern int const glf90w_x11_xcb_vulkan_surface;
extern int const glf90w_wayland_libdecor;
extern int const glf90w_any_platform;
extern int const glf90w_platform_win32;
extern int const glf90w_platform_cocoa;
extern int const glf90w_platform_wayland;
extern int const glf90w_platform_x11;
extern int const glf90w_platform_null;
extern int const glf90w_dont_care;